# python_ftp_server

./: .editorconfig  .gitignore  README.md  ftp_server.py  make_executable.py  openwrt_firewall  pyproject.toml  requirements.txt  setup.cfg  setup.py
pyftp-server/: ftp_server.py
python_ftp_server/: __init__.py  __main__.py  ftp_server.py
