[tool.poetry]
name = "python_ftp_server"
version = "1.3.1"
description = "Command line FTP server tool designed for performance and ease of use."
authors = ["Vadym Stupakov <vadim.stupakov@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Red-Eyed/python_ftp_server"
repository = "https://github.com/Red-Eyed/python_ftp_server"
documentation = "https://github.com/Red-Eyed/python_ftp_server"

keywords = ["ftp", "cli", "cmd", "server"]

classifiers = [
    "Topic :: Communications :: File Sharing",
    "Topic :: Internet :: File Transfer Protocol (FTP)"
]

[tool.poetry.dependencies]
python = ">=3.6"
requires = [
    "requests >= 2.26",
    "pyftpdlib >= 1.5.6",
    "pyopenssl >= 21.0.0",
    "pysendfile; platform_system != 'Windows'"
]

[tool.poetry.dev-dependencies]
requires = [
    "pyinstaller >= 4.7",
]
