[tool.poetry]
name = "python_ftp_server"
version = "1.3.3"
description = "Command line FTP server tool designed for performance and ease of use."
authors = ["Vadym Stupakov <vadim.stupakov@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Red-Eyed/python_ftp_server"
repository = "https://github.com/Red-Eyed/python_ftp_server"
documentation = "https://github.com/Red-Eyed/python_ftp_server"

keywords = ["ftp", "cli", "cmd", "server"]

classifiers = [
    "Topic :: Communications :: File Sharing",
    "Topic :: Internet :: File Transfer Protocol (FTP)"
]

[dependencies]
python = ">=3.6,<=3.10"
requests = { version = ">= 2.26" }
pyftpdlib = { version = ">= 1.5.6" }
pyopenssl = { version = ">= 21.0.0" }
pysendfile = { version = ">= 2.0.1", markers = "platform_system != 'Windows'" }


[dev-dependencies]
pyinstaller = { version = ">= 4.7" }

[scripts]
ftp_server = "python_ftp_server.ftp_server:main"
