[metadata]
name = python_ftp_server
description = Command line FTP server tool designed for performance and ease of use.
version = 1.3.11
author = Vadym Stupakov 
author_email = vadym.stupakov@gmail.com
mainteiner = Vadym Stupakov 
maintainer_email = vadym.stupakov@gmail.com
url = https://github.com/Red-Eyed/python_ftp_server
license = MIT
keywords = ftp, cli, cmd, server
classifiers = Topic :: Communications :: File Sharing
              Topic :: Internet :: File Transfer Protocol (FTP)
 
[options] 
install_requires = 
    requests>=2.26
    pyftpdlib>=1.5.6
    pyopenssl>=21.0.0
    pysendfile>=2.0.1;sys_platform != "win32"

[options.entry_points]
console_scripts =
    python_ftp_server = python_ftp_server:ftp_server

 
[flake8] 
max-line-length = 120 
ignore = 
    W605,F541 
 
enable = 
    W0614 
 
optional-ascii-coding = True