[metadata]
name = python_ftp_server
description = Command line FTP server tool designed for performance and ease of use.
long_description_content_type=text/markdown
long_description = file: README.md
version = 1.3.18
author = Vadym Stupakov 
author_email = vadim.stupakov@gmail.com
mainteiner = Vadym Stupakov 
maintainer_email = vadim.stupakov@gmail.com
url = https://github.com/Red-Eyed/python_ftp_server
license = MIT
keywords = ftp, cli, cmd, server
classifiers = Topic :: Communications :: File Sharing
              Topic :: Internet :: File Transfer Protocol (FTP)
 
[options]
python_requires = >=3.6
install_requires = 
    requests>=2.26
    pyftpdlib>=1.5.6
    pyopenssl>=21.0.0
    pysendfile>=2.0.1;sys_platform != "win32"

packages = python_ftp_server
 
[flake8] 
max-line-length = 120 
ignore = 
    W605,F541 
 
enable = 
    W0614 
 
optional-ascii-coding = True
